fix router outlets causing overflow problems. Some styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -59,4 +59,9 @@ $user-menu-width: 150px;
 
 .router-outlet {
     height: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
