--- a/src/components/NodeDetailComponent/NodeDetailComponent.scss
+++ b/src/components/NodeDetailComponent/NodeDetailComponent.scss
@@ -99,3 +99,12 @@
     border: none;
     color: rgba(0, 0, 0, 0.54);
 }
+
+.list-icon {
+    padding: 4px;
+}
+
+.list-icon:hover {
+    background-color: rgba(#ccc, 0.5);
+    border-radius: 4px;
+}
